[project]
name = "nonebot-plugin-deer-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SNRainiar", email = "rainiar@foxmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
